# codex-sdk-unofficial

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: dedication.md  faq.md  index.md
docs/appendix/: pip-fallback.md
docs/concepts/: how-this-sdk-works.md  input-model.md  threads-turns-events-items.md
docs/contributing/: docs-contribution-guide.md
docs/cookbook/: automation-scripts.md  ci-usage-patterns.md  long-running-stream-consumers.md  quick-recipes.md  structured-json-workflows.md
docs/getting-started/: installation.md  prerequisites-and-cli.md  your-first-script.md  your-first-streaming-turn.md
docs/guides/: basic-run-and-stateful-conversations.md  cancellation-and-aborts.md  config-overrides-and-toml.md  environment-variables-and-originator.md  error-handling-patterns.md  image-inputs.md  options-codex-thread-turn.md  resume-threads.md  security-and-sandboxing.md  streaming-events.md  structured-output.md
docs/reference/: api-overview.md  codex-class.md  events-reference.md  items-reference.md  options-reference.md  thread-class.md  type-aliases-and-compat.md
docs/releasing/: github-and-pypi-release-flow.md
docs/troubleshooting/: common-errors.md
samples/: basic_streaming.py  structured_output.py
src/codex_sdk/: __init__.py  codex.py  codex_options.py  events.py  exec.py  items.py  output_schema_file.py  thread.py  thread_options.py  turn_options.py
tests/: test_exec.py  test_output_schema_file.py  test_thread.py
